fix: history table overflowing mat-card
Now the table itself will have a scrollbar instead of just spilling over the card.

Part of LINSELF-105

--- a/src/app/history/history.component.scss
+++ b/src/app/history/history.component.scss
@@ -1,7 +1,11 @@
 @import '/src/theme.scss';
 
-table {
-  width: 100%;
+.table-wrap {
+  overflow-x: auto;
+
+  table {
+    width: 100%;
+  }
 }
 
 .filter {
